fix(a11y: `DiscussionListItem`): controls dropdown not visible when tabbed into (#3450)

--- a/framework/core/less/forum/DiscussionListItem.less
+++ b/framework/core/less/forum/DiscussionListItem.less
@@ -207,6 +207,10 @@
     opacity: 0;
     transition: opacity 0.2s;
 
+    &:focus-within {
+      opacity: 1;
+    }
+
     .Dropdown-toggle {
       display: block;
     }
